# kuva

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
assets/fonts/: LICENSE-NewCM
benches/: kde.rs  render.rs  svg.rs
docs/: book.toml
docs/src/: SUMMARY.md  benchmarks.md  gallery.md  introduction.md  origins.md
docs/src/cli/: bar.md  box.md  density.md  histogram.md  index.md  raincloud.md  ridgeline.md  scatter.md  strip.md  violin.md
docs/src/plots/: band.md  bar.md  boxplot.md  brick.md  candlestick.md  chord.md  contour.md  dotplot.md  heatmap.md  histogram.md  histogram2d.md  line.md  manhattan.md  phylo.md  pie.md  polar.md  raincloud.md  sankey.md  scatter.md  series.md  stacked_area.md  strip.md  synteny.md  ternary.md  upset.md  violin.md  volcano.md  waterfall.md
docs/src/reference/: figure.md  interactive.md  layout.md  math.md  palettes.md  themes.md
docs/tapes/: bar.tape  box.tape  candlestick.tape  chord.tape  contour.tape  dot.tape  heatmap.tape  hist2d.tape  histogram.tape  line.tape  manhattan.tape  phylo.tape  pie.tape  sankey.tape  scatter.tape  stacked-area.tape  strip.tape  synteny.tape  upset.tape  violin.tape  volcano.tape  waterfall.tape
examples/: all_plots_complex.rs  all_plots_simple.rs  band.rs  bar.rs  boxplot.rs  brick.rs  bump.rs  calendar.rs  candlestick.rs  chord.rs  contour.rs  dotplot.rs  funnel.rs  gen_text_metrics.rs  heatmap.rs  hexbin.rs  histogram.rs  histogram2d.rs  jointplot.rs  layout.rs  legend_plot.rs  line.rs  manhattan.rs  math.rs  mosaic.rs  phylo.rs  pie.rs  polar.rs  quiver.rs  raincloud.rs  roc.rs  rose.rs  sankey.rs  scatter.rs  series.rs  stacked_area.rs  strip.rs  sunburst.rs  synteny.rs  ternary.rs  (+5 more)
examples/data/: README.md  bar.tsv  candlestick.tsv  chord.tsv  contour.tsv  dot.tsv  gene_stats.tsv  generate.py  heatmap.tsv  hist2d.tsv  histogram.tsv  measurements.tsv  phylo.tsv  pie.tsv  reads.tsv  samples.tsv  sankey.tsv  scatter.parquet  scatter.tsv  stacked_area.tsv  synteny_blocks.tsv  synteny_seqs.tsv  upset.tsv  volcano.tsv  waterfall.tsv
man/: kuva.1  visus.1
scripts/: gen_docs.sh  gen_terminal_docs.sh  smoke_tests.sh  terminal_plots.sh
src/: fonts.rs  lib.rs  prelude.rs  render.rs
src/backend/: mod.rs  pdf.rs  png.rs  raster.rs  svg.rs  svg_math.rs  terminal.rs  typst.rs
src/plot/: band.rs  bar.rs  boxplot.rs  brick.rs  calendar.rs  candlestick.rs  chord.rs  contour.rs  diceplot.rs  dotplot.rs  fill_pattern.rs  heatmap.rs  histogram.rs  histogram2d.rs  jointplot.rs  legend.rs  legend_plot.rs  line.rs  manhattan.rs  mod.rs  mosaic.rs  network.rs  phylo.rs  pie.rs  polar.rs  quiver.rs  raincloud.rs  roc.rs  sankey.rs  scatter.rs  scatter3d.rs  series.rs  stacked_area.rs  strip.rs  synteny.rs  ternary.rs  types.rs  upset.rs  violin.rs  volcano.rs  (+1 more)
src/render/: annotations.rs  axis.rs  bw.rs  color.rs  datetime.rs  figure.rs  layout.rs  math.rs  mod.rs  palette.rs  plots.rs  render.rs  render_utils.rs  theme.rs
src/render/text_metrics/: data.rs  mod.rs
test_outputs/: typst_basic.typ  typst_math.typ
tests/: annotations_svg.rs  band_svg.rs  bar_svg.rs  boxplot_svg.rs  brick_legend_columns.rs  brickplot.rs  bump_basic.rs  bw_mode.rs  calendar_basic.rs  candlestick_svg.rs  chord_basic.rs  cli_basic.rs  clip_svg.rs  clustermap.rs  colorbar_label_width.rs  colorbar_tick_format.rs  colorbar_tick_spacing.rs  colormap_basic.rs  contour_svg.rs  datetime_svg.rs  density_basic.rs  diceplot_svg.rs  dotplot_svg.rs  ecdf_basic.rs  enclosed_internal_svg.rs  enclosed_mirrored_svg.rs  equal_aspect.rs  figure_svg.rs  forest_basic.rs  funnel_basic.rs  gantt_basic.rs  heatmap.rs  hexbin_basic.rs  hist2d_svg.rs  hist_svg.rs  horizon_basic.rs  interactive_svg.rs  jointplot.rs  label_centering_svg.rs  label_overlap_svg.rs  (+63 more)
tests/common/: mod.rs
