[package]
name = "kuva"
version = "0.3.0"
edition = "2021"
description = "Scientific plotting library in Rust with various backends."
authors = ["James M. Ferguson <j.ferguson@garvan.org.au>"]
repository = "https://github.com/Psy-Fer/kuva"
license = "MIT"
keywords = ["plotting", "bioinformatics", "svg", "visualization", "science"]
categories = ["science", "visualization", "graphics", "command-line-utilities"]
documentation = "https://docs.rs/kuva"
readme = "README.md"
# Only the gzip-compressed .ttf.gz files are needed at compile time (include_bytes!).
# The raw .ttf files, the mdBook documentation tree, generated example outputs,
# and helper scripts are excluded to stay within the crates.io 10 MB limit.
exclude = [
    "assets/fonts/*.ttf",           # raw TTFs — only .ttf.gz are used by include_bytes!
    "docs/",                         # mdBook source + generated SVG/PNG/GIF/PDF assets
    "scripts/",                      # smoke test and generation scripts
    "examples/*.svg",                # generated SVG outputs
    "examples/*.png",                # generated PNG outputs
    "examples/data/gene_stats.tsv",  # large TSV (~500 KB) only used in smoke tests
    "examples/data/gene_stats_logp.tsv",
]

[package.metadata.docs.rs]
all-features = true

[features]
default    = []
png        = ["dep:fontdue", "dep:png", "dep:flate2"]
pdf        = ["dep:svg2pdf", "dep:flate2"]
embed_font = ["dep:flate2"]
cli        = ["dep:clap", "dep:clap_mangen", "dep:csv"]
full       = ["embed_font", "png", "pdf"]
parquet    = ["cli", "dep:parquet", "dep:bytes", "dep:arrow-array", "dep:arrow-schema"]
# Adds `kuva doom` subcommand and generates a self-contained DOOM SVG.
# Build downloads doom.wasm + doom1.wad from the kuva doom-assets release.
# Run once: cargo build --bin kuva --features cli,doom
doom = ["cli"]

[dependencies]
bytes = { version = "1", optional = true }
colorous = "=1.0.16"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ryu = "1"
flate2      = { version = "1", optional = true }
fontdue     = { version = "0.9",  optional = true }
png         = { version = "0.18", optional = true }
parquet      = { version = "58.3", features = ["arrow"], optional = true }
arrow-array  = { version = "58.3", optional = true }
arrow-schema = { version = "58.3", optional = true }
svg2pdf     = { version = "0.13", optional = true }
clap        = { version = "4", features = ["derive"], optional = true }
clap_mangen = { version = "0.2", optional = true }
csv         = { version = "1", optional = true }

[dev-dependencies]
rand = "0.9.3"
rand_distr = "0.5.1"
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }
image = "0.24"

[[bench]]
name = "render"
harness = false

[[bench]]
name = "kde"
harness = false

[[bench]]
name = "svg"
harness = false

[[bin]]
name = "kuva"
path = "src/bin/kuva/main.rs"
required-features = ["cli"]

[[example]]
name = "figure"

[[example]]
name = "all_plots_simple"

[[example]]
name = "all_plots_complex"
required-features = ["png"]
